[package]
name = "terrier"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.29.0"
fuzzy-matcher = "0.3.7"
owo-colors = "4.2.0"
petgraph = "0.8.1"
ratatui = "0.29.0"
regex = "1.11.1"
tabled = "0.19.0"
walkdir = "2.5.0"
